--- a/src/app/components/avis/avis.component.html
+++ b/src/app/components/avis/avis.component.html
@@ -12,18 +12,11 @@
       <button class="reset-button" (click)="resetFilters()" *ngIf="hasActiveFilters()">Réinitialiser</button>
     </div>
   
-    <!-- Bouton Ajouter un véhicule -->
+    <!-- Bouton Ajouter un avis -->
     <a class="add-event-button" (click)="openAddModal()">Ajouter votre avis</a>
   
-    <!-- Liste des véhicules -->
-    <div class="pagination-info">
-      Affichage {{firstItemOnPage()}}-{{lastItemOnPage()}} sur {{filteredAvis().length}} véhicules
-    </div>
-    <div class="pagination-controls">
-      <button (click)="previousPage()" [disabled]="currentPage === 1">Précédent</button>
-      <span>Page {{currentPage}} / {{totalPages}}</span>
-      <button (click)="nextPage()" [disabled]="currentPage === totalPages">Suivant</button>
-    </div>
+    <!-- Liste des avis -->
+
   
     <div class="avis-list">
       <div *ngFor="let avis of paginatedAvis()" class="avis-item">
@@ -40,6 +33,14 @@
       </div>
       <div *ngIf="filteredAvis().length === 0" class="no-avis">
         Aucun avis trouvé
+      </div>
+      <div class="pagination-info">
+        Affichage {{firstItemOnPage()}}-{{lastItemOnPage()}} sur {{filteredAvis().length}} véhicules
+      </div>
+      <div class="pagination-controls">
+        <button (click)="previousPage()" [disabled]="currentPage === 1">Précédent</button>
+        <span>Page {{currentPage}} / {{totalPages}}</span>
+        <button (click)="nextPage()" [disabled]="currentPage === totalPages">Suivant</button>
       </div>
     </div>
   </div>
