--- a/src/app/components/servicesvehicules/servicesvehicules.component.html
+++ b/src/app/components/servicesvehicules/servicesvehicules.component.html
@@ -1,59 +1,66 @@
 <div class="container">
-    <h1>Liste des services effectuees a ce vehicule</h1>
-  
-    <!-- Filtre de recherche (seulement pour la liste complète) -->
-    <div class="search-container">
+  <h1>Liste des services effectuees a ce vehicule</h1>
+
+  <!-- Filtre de recherche (seulement pour la liste complète) -->
+  <!-- <div class="search-container">
+    <input
+      type="date"
+      [(ngModel)]="startDate"
+      placeholder="Rechercher par date"
+      class="search-input">
       <input
-        type="date"
-        [(ngModel)]="startDate"
-        placeholder="Rechercher par date"
-        class="search-input">
-        <input
-        type="date"
-        [(ngModel)]="endDate"
-        placeholder="Rechercher par date"
-        class="search-input">
-      <button class="search-button" (click)="applyFilter()">Rechercher</button>
-    </div>   
-    <!-- Liste de tous les rendez-vous avec pagination -->
-    <div class="event-list">
-      <table>
-        <thead>
-          <tr>
-            <th>Marque</th>
-            <th>Modèle</th>
-            <th>Immatriculation</th>
-            <th>Service</th>
-            <th>Description</th>
-            <th>Prix</th>
-            <th>Date début</th>
-            <th>Date fin</th>
-            <th>Statut</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr *ngFor="let sv of paginatedServicehicule()">
-            <td>{{ sv.vehiculeId?.marque || 'N/A' }}</td>
-            <td>{{ sv.vehiculeId?.modele || 'N/A' }}</td>
-            <td>{{ sv.vehiculeId?.Immatriculation || 'N/A' }}</td>
-            <td>{{ sv.serviceId?.nom || 'N/A' }}</td>
-            <td>{{ sv.serviceId?.descriptioncourte || 'N/A' }}</td>
-            <td>{{ sv.serviceId?.prix | currency }}</td>
-            <td>{{ sv.datedebut | date:'short' }}</td>
-            <td>{{ sv.datefin | date:'short' }}</td>
-            <td [ngClass]="'statut-' + sv.statut.toLowerCase().replace(' ', '-')">
-              {{ sv.statut }}
-            </td>
-          </tr>
-        </tbody>
-      </table>
-      <p><span>Total des services: {{totalservice}}</span></p>
-      <p><span>Somme: {{sommeprix |currency}} Ariary</span></p>
-      <!-- Pagination -->
-      <div class="pagination">
-        <button (click)="previousPage()" [disabled]="currentPage === 1">Précédent</button>
-        <span>Page {{ currentPage }} / {{ totalPages }}</span>
-        <button (click)="nextPage()" [disabled]="currentPage === totalPages">Suivant</button>
-      </div>
+      type="date"
+      [(ngModel)]="endDate"
+      placeholder="Rechercher par date"
+      class="search-input">
+    <button class="search-button" (click)="applyFilter()">Rechercher</button>
+  </div>    -->
+  <!-- Liste de tous les rendez-vous avec pagination -->
+  <div class="event-list">
+    <table>
+      <thead>
+        <tr>
+          <th>Marque</th>
+          <th>Modèle</th>
+          <th>Immatriculation</th>
+          <th>Service</th>
+          <th>Description</th>
+          <th>Prix</th>
+          <th>Date début</th>
+          <th>Date fin</th>
+          <th>Statut</th>
+          <th>Action</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let sv of paginatedServicehicule()">
+          <td>{{ sv.vehiculeId?.marque || 'N/A' }}</td>
+          <td>{{ sv.vehiculeId?.modele || 'N/A' }}</td>
+          <td>{{ sv.vehiculeId?.Immatriculation || 'N/A' }}</td>
+          <td>{{ sv.serviceId?.nom || 'N/A' }}</td>
+          <td>{{ sv.serviceId?.descriptioncourte || 'N/A' }}</td>
+          <td>{{ sv.serviceId?.prix | currency }}</td>
+          <td>{{ sv.datedebut | date:'short' }}</td>
+          <td>{{ sv.datefin | date:'short' }}</td>
+          <td [ngClass]="'statut-' + sv.statut.toLowerCase().replace(' ', '-')">
+            {{ sv.statut }}
+          </td>
+          <td>
+            <button class="btn-services" (click)="avis(sv._id)" >Noter</button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+    <div *ngIf="paginatedServicehicule().length === 0" class="no-services">
+      <i class="fas fa-car"></i> Aucun service véhicule trouvé
+    </div>
+    <p><span>Total des services: {{totalservice}}</span></p>
+    <p><span>Somme: {{sommeprix |currency}} Ariary</span></p>
+    <!-- Pagination -->
+    <div class="pagination">
+      <button (click)="previousPage()" [disabled]="currentPage === 1">Précédent</button>
+      <span>Page {{ currentPage }} / {{ totalPages }}</span>
+      <button (click)="nextPage()" [disabled]="currentPage === totalPages">Suivant</button>
     </div>
   </div>
+</div>
