--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -3,7 +3,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 
-<!-- <div class="header">
+<div class="header">
   <div class="header-left">
     <span class="logo">Garage</span>
   </div>
@@ -17,7 +17,7 @@
   <span class="sidebar-toggle" ((click))="toggleSidebar()">
     <i class="fas fa-bars"></i>
   </span>
-</div> -->
+</div>
 
 <!-- Sidebar -->
 <div class="sidebar">
@@ -26,12 +26,10 @@
   </div>
   <ul class="sidebar-list">
     <li><a routerLink="/dashboard" routerLinkActive="active"><i class="fas fa-tachometer-alt"></i> Tableau de bord</a></li>
-    <li><a routerLink="/rendezvous" routerLinkActive="active" class="active"><i class="fas fa-calendar-check"></i> Rendez-vous</a></li>
-    <li><a routerLink="/mecanicien" routerLinkActive="active"><i class="fas fa-cogs"></i> Mécanicien</a></li>
-    <li><a routerLink="/profil_mecanicien" routerLinkActive="active"><i class="fas fa-user-circle"></i> Profil</a></li>
-    <li><a routerLink="/conge" routerLinkActive="active"><i class="fas fa-sun"></i> Congé</a></li>
-    <li><a routerLink="/service"><i class="fas fa-wrench"></i> Services</a></li>
-    <li><a routerLink="/evenement" routerLinkActive="active"><i class="fas fa-calendar-alt"></i> Événement</a></li>
+    <li><a href="/validationrendezvous"routerLinkActive="active"><i class="fas fa-calendar-check"></i> Rendez-vous</a></li>
+    <li><a href="/validationdemande" routerLinkActive="active"><i class="fas fa-sun"></i> Congé</a></li>
+    <li><a href="/service"><i class="fas fa-wrench"></i> Services</a></li>
+    <li><a href="/evenement" routerLinkActive="active"><i class="fas fa-calendar-alt"></i> Événement</a></li>
   </ul>
 </div>
 
