Update sidebar and auth service

--- a/src/app/components/loginmecanicien/loginmecanicien.component.html
+++ b/src/app/components/loginmecanicien/loginmecanicien.component.html
@@ -29,13 +29,12 @@
           required 
           class="form-input"
           placeholder="••••••••">
-      </div>
-      
+      </div>    
       <div class="form-actions">
         <button type="submit" class="login-button">Se connecter</button>
-        <button type="button" (click)="register()" class="secondary-button">
+        <!-- <button type="button" (click)="register()" class="secondary-button">
           Créer un compte
-        </button>
+        </button> -->
       </div>
       
       <!-- <div class="forgot-password">
