--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -9,9 +9,9 @@
   </div>
 
   <div class="header-right">
-    <a href="#" class="logout-icon">
+    <button type="submit" (click)="logout()" class="logout-button">
       <i class="fas fa-sign-out-alt"></i> Déconnexion
-    </a>
+    </button>
   </div>
 
   <span class="sidebar-toggle" ((click))="toggleSidebar()">
