--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -25,11 +25,11 @@
     <h3><i class="fas fa-car"></i> Menu Principal</h3>
   </div>
   <ul class="sidebar-list">
-    <li><a routerLink="/dashboard" routerLinkActive="active"><i class="fas fa-tachometer-alt"></i> Tableau de bord</a></li>
-    <li><a href="/validationrendezvous"routerLinkActive="active"><i class="fas fa-calendar-check"></i> Rendez-vous</a></li>
-    <li><a href="/validationdemande" routerLinkActive="active"><i class="fas fa-sun"></i> Congé</a></li>
-    <li><a href="/service"><i class="fas fa-wrench"></i> Services</a></li>
-    <li><a href="/evenement" routerLinkActive="active"><i class="fas fa-calendar-alt"></i> Événement</a></li>
+    <li *ngFor="let item of menuItems">
+      <a [routerLink]="item.path" routerLinkActive="active">
+        <i [class]="item.icon"></i> {{ item.title }}
+      </a>
+    </li>
   </ul>
 </div>
 
