--- a/src/app/components/service/service.component.html
+++ b/src/app/components/service/service.component.html
@@ -27,8 +27,8 @@
     <h2 class="section-title">Tous les services</h2>    
     <div class="service-list">
       <div *ngFor="let service of paginatedServices()" class="service-item">
-        <div class="service-img">
-           <img src="/src/assets/img/nopicture.png" alt="Image">
+        <div class="event-img">
+          <img src="{{service.image}}" alt="{{service.nom}}"> 
         </div>
         <div class="service-info">
           <h3>{{ service.nom }}</h3>
@@ -98,11 +98,7 @@
       </div>
       <div class="form-group">
         <label for="image">Image</label>
-        <input type="file" id="image"  accept="image/*" name="image" [(ngModel)]="newService.image" class="form-input-file">
-      <!-- Aperçu de l'image -->
-       <!-- <div *ngIf="imagePreview" class="image-preview">
-         <img [src]="imagePreview" alt="Aperçu de l'image">
-       </div> -->
+        <input type="file" id="image" (change)="onFileSelected($event)" [(ngModel)]="newService.image" name="image" class="form-input-file">
       </div>   
       <div class="modal-actions">
         <button type="button" (click)="closeModal()" class="secondary-button">Annuler</button>
