--- a/src/app/components/service/service.component.css
+++ b/src/app/components/service/service.component.css
@@ -421,3 +421,15 @@
     padding: 20px;
   }
 }
+.event-img {
+  width: 150px;
+  height: 150px;
+  flex-shrink: 0;
+}
+
+.event-img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 8px;
+}
